src/headings.css
/* headings.css */

div {
  --illini-orange: #ff552e;
}

[role='option'] {
  display: grid;
  grid-template-columns: repeat(6, 1.33rem) 1fr;
  column-gap: 2px;
}

[role='option'][aria-selected='true'],
[role='option'][aria-selected='true']:hover {
  outline-color: var(--illini-orange);
}

.h1-name, .h2-name, .h3-name, .h4-name, .h5-name, .h6-name {
  color: #999;
  font-size: 85%;
  margin-top: 1.4px;
  text-transform: lowercase;
}

.h1-text, .h2-text, .h3-text, .h4-text, .h5-text, .h6-text {
  /*
  *   Change user-select value to 'all' if heading text content problems
  *   are resolved (by using getElementContent and isVisible functions).
  *
  *   user-select: all;
  */
}

.h1-name { grid-column: 1; }
.h1-text { grid-column: 2 / span 6; }

.h2-name { grid-column: 2; }
.h2-text { grid-column: 3 / span 5; }

.h3-name { grid-column: 3; }
.h3-text { grid-column: 4 / span 4; }

.h4-name { grid-column: 4; }
.h4-text { grid-column: 5 / span 3; }

.h5-name { grid-column: 5; }
.h5-text { grid-column: 6 / span 2; }

.h6-name { grid-column: 6; }
.h6-text { grid-column: 7; }

span.empty {
  color: #999;
}

